completed section.portfolio

--- a/index.html
+++ b/index.html
@@ -134,5 +134,131 @@
     
         </div>
     </section>
+
+    <section class="portfolio" id="portfolio">
+        <div class="section-heading">
+            <h2>portfolio</h2>
+            <div class="cercle"></div>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+        </div>
+
+        <div class="content">
+            <div class="menu">
+                <ul>
+                    <li><span>All</span><input type="radio" name="portfolio-menu" id="" checked></li>
+                    <li><span>app</span><input type="radio" name="portfolio-menu" id=""></li>
+                    <li><span>photography</span><input type="radio" name="portfolio-menu" id=""></li>
+                    <li><span>web</span><input type="radio" name="portfolio-menu" id=""></li>
+                    <li><span>print</span><input type="radio" name="portfolio-menu" id=""></li>
+                </ul>
+            </div>
+        </div>
+
+        <section class="image-view">
+            <div class="images">
+                <div class="image-container">
+                    <img src="images/p1.jpg" alt="">
+                    <div class="icon">
+                        <i class="fa-solid fa-plus"></i>
+                        <span></span>
+                    </div>
+                    <div class="text">
+                        <h4>awesome image</h4>
+                        <span>photography</span>
+                    </div>
+                </div>
+                <div class="image-container">
+                    <img src="images/p2.jpg" alt="">
+                    <div class="icon">
+                        <i class="fa-solid fa-plus"></i>
+                        <span></span>
+                    </div>
+                    <div class="text">
+                        <h4>awesome image</h4>
+                        <span>photography</span>
+                    </div>
+                </div>
+                <div class="image-container">
+                    <img src="images/p3.jpg" alt="">
+                    <div class="icon">
+                        <i class="fa-solid fa-plus"></i>
+                        <span></span>
+                    </div>
+                    <div class="text">
+                        <h4>awesome image</h4>
+                        <span>photography</span>
+                    </div>
+                </div>
+                <div class="image-container">
+                    <img src="images/p4.jpg" alt="">
+                    <div class="icon">
+                        <i class="fa-solid fa-plus"></i>
+                        <span></span>
+                    </div>
+                    <div class="text">
+                        <h4>awesome image</h4>
+                        <span>photography</span>
+                    </div>
+                </div>
+                <div class="image-container">
+                    <img src="images/p5.jpg" alt="">
+                    <div class="icon">
+                        <i class="fa-solid fa-plus"></i>
+                        <span></span>
+                    </div>
+                    <div class="text">
+                        <h4>awesome image</h4>
+                        <span>photography</span>
+                    </div>
+                </div>
+                <div class="image-container">
+                    <img src="images/p6.jpg" alt="">
+                    <div class="icon">
+                        <i class="fa-solid fa-plus"></i>
+                        <span></span>
+                    </div>
+                    <div class="text">
+                        <h4>awesome image</h4>
+                        <span>photography</span>
+                    </div>
+                </div>
+                <div class="image-container">
+                    <img src="images/p7.jpg" alt="">
+                    <div class="icon">
+                        <i class="fa-solid fa-plus"></i>
+                        <span></span>
+                    </div>
+                    <div class="text">
+                        <h4>awesome image</h4>
+                        <span>photography</span>
+                    </div>
+                </div>
+                <div class="image-container">
+                    <img src="images/p8.jpg" alt="">
+                    <div class="icon">
+                        <i class="fa-solid fa-plus"></i>
+                        <span></span>
+                    </div>
+                    <div class="text">
+                        <h4>awesome image</h4>
+                        <span>photography</span>
+                    </div>
+                </div>
+            </div>
+            <button>more</button>
+        </section>
+        <section class="video-view">
+            <div class="video-mask">
+                <div class="container">
+                    <div class="info">
+                        <h4>super awesome video here</h4>
+                        <div class="video-container"></div>
+                        <p>it's all you need</p>
+                        <button>see more</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
 </body>
 </html>
