completed section.pricing

--- a/index.html
+++ b/index.html
@@ -393,6 +393,90 @@
         </footer>
     </section>
 
+
+    <section class="pricing" id="pricing">
+        <div class="container">
+            <div class="section-heading">
+                <h2>pricing</h>
+                <div class="cercle"></div>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            </div>
+            <div class="plans">
+                <div class="plan">
+                    <header>
+                        <h4>Basic</h4>
+                        <div class="plan__price"><span>&dollar;</span><span>19</span><span>mo</span></div>
+                    </header>
+                    <ul class="plan__body">
+                        <li>Feature NO 1</li>
+                        <li>Extra Feature</li>
+                        <li>Feature NO 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <footer><button>Buy Now</button></footer>
+                </div>
+                <div class="plan">
+                    <header>
+                        <h4>Premium</h4>
+                        <div class="plan__price"><span>&dollar;</span><span>29</span><span>mo</span></div>
+                    </header>
+                    <ul class="plan__body">
+                        <li>Feature NO 1</li>
+                        <li>Extra Feature</li>
+                        <li>Feature NO 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <footer><button>Buy Now</button></footer>
+                </div>
+                <div class="plan">
+                    <header>
+                        <h4>Pro</h4>
+                        <div class="plan__price"><span>&dollar;</span><span>39</span><span>mo</span></div>
+                    </header>
+                    <ul class="plan__body">
+                        <li>Feature NO 1</li>
+                        <li>Extra Feature</li>
+                        <li>Feature NO 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <footer><button>Buy Now</button></footer>
+                </div>
+                <div class="plan">
+                    <header>
+                        <h4>Platinum</h4>
+                        <div class="plan__price"><span>&dollar;</span><span>49</span><span>mo</span></div>
+                    </header>
+                    <ul class="plan__body">
+                        <li>Feature NO 1</li>
+                        <li>Extra Feature</li>
+                        <li>Feature NO 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <footer><button>Buy Now</button></footer>
+                </div>
+            </div>
+        </div>
+
+        <div class="special-request">
+            <div class="container">
+                <p>contact us if you have special request</p>
+                <a href="#contact">contact us</a>
+            </div>
+        </div>
+
+        <div class="subscribe">
+            <div class="container">
+                <div class="mail-part">
+                    <i class="fa-regular fa-envelope"></i>
+                    <input type="email" name="email" placeholder="YOUR EMAIL">
+                    <button>subscribe</button>
+                </div>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blan dit aliquet elit, eget tincidunt.</p>
+            </div>
+        </div>
+    </section>
+
+
     <svg class="svg">
         <clipPath id="statics-icon-polygon" clipPathUnits="objectBoundingBox"><path d="M0.435,0.022 C0.477,0,0.528,0,0.57,0.022 L0.935,0.211 C0.977,0.233,1,0.273,1,0.316 V0.695 C1,0.738,0.977,0.778,0.935,0.8 L0.57,0.989 C0.528,1,0.477,1,0.435,0.989 L0.07,0.8 C0.028,0.778,0.002,0.738,0.002,0.695 V0.316 C0.002,0.273,0.028,0.233,0.07,0.211 L0.435,0.022"></path></clipPath>
     </svg>
