--- a/index.html
+++ b/index.html
@@ -476,6 +476,46 @@
         </div>
     </section>
 
+    <section class="contact-us">
+        <div class="container">
+
+            <div class="section-heading">
+                <h2>Contact us</h2>
+                <div class="cercle"></div>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            </div>
+
+            <div class="content">
+                <form action="">
+                    <input type="text" name="client_name" id="client_name" placeholder="YOUR NAME">
+                    <input type="email" name="client_email" id="client_email" placeholder="YOUR EMAIL">
+                    <textarea name="client_message" id="client_message" placeholder="YOUR MESSAGE"></textarea>
+                    <input type="submit" value="send message">
+                </form>
+                <div class="info">
+                    <div class="block"><h4>get in touch</h4><a href="tel:+00 123.456.789">+00 123.456.789</a><a href="tel:+00 123.456.789">+00 123.456.789</a></div>
+                
+                    <div class="block"><h4>where we are</h4><span>Awesome Address 17</span><span>New York,NYC</span><a href="tel:123-4567-890">123-4567-890</a><span>USA</span></div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <footer>
+        <div class="container">
+                <img src="images/logo.png" alt="">
+                <h4>we are social</h4>
+                <div class="social-media">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <i class="fa-brands fa-telegram"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+            <p>&copy; 2014 - <span>Kasper</span> All Right Reserved</p>
+        </div>
+    </footer>
 
     <svg class="svg">
         <clipPath id="statics-icon-polygon" clipPathUnits="objectBoundingBox"><path d="M0.435,0.022 C0.477,0,0.528,0,0.57,0.022 L0.935,0.211 C0.977,0.233,1,0.273,1,0.316 V0.695 C1,0.738,0.977,0.778,0.935,0.8 L0.57,0.989 C0.528,1,0.477,1,0.435,0.989 L0.07,0.8 C0.028,0.778,0.002,0.738,0.002,0.695 V0.316 C0.002,0.273,0.028,0.233,0.07,0.211 L0.435,0.022"></path></clipPath>
